# lava

./: .cursorignore  CMakeLists.txt  Package.swift  README.md  lava_language_specification.md  migration.md
.github/workflows/: ci.yml  ci_mlir.yml  docs.yml
Plugins/SwiftDocCStub/: Plugin.swift
Sources/CMLIR/: module.modulemap
Sources/CombinedLSP/: main.swift
Sources/Lava/: Lava.swift  LavaCommandDSL.swift  LavaCommandMVC.swift  LavaError.swift  LavaUnified.swift  SerializationHelper.swift  Synchronization.swift
Sources/LavaDemo/: ModernDemo.swift
Sources/LavaLSP/: LavaLanguageServer.swift  main.swift
Sources/LavaMacros/: LavaMacros.swift
Sources/MLIRLSP/: README.md  language-configuration.json  package.json  tsconfig.json
Sources/MLIRQuasiDSL/: QuasiMLIR.swift
Sources/MLIRSwift/: Attributes.swift  DialectRegistry.swift  Types.swift  lib.swift
Sources/OuroCompiler/: main.swift
Sources/OuroLangCore/: AST.swift  ASTPrinter.swift  CodeGenerator.swift  Lexer.swift  MLIRDialectManager.swift  MLIRPrinter.swift  ModernCodeGenerator.swift  ModernCodeGeneratorAdapter.swift  OuroType.swift  Parser.swift  SemanticAnalyzer.swift  SymbolTable.swift  TensorOperations.swift  Token.swift  TypeChecker.swift  TypeNodes.swift  TypeOperations.swift  TypeResolver.swift
Sources/OuroLangLSP/: main.swift
Sources/OuroLangMLIR/: main.swift
Sources/OuroTranspiler/: main.swift
cmlir/: shim.h
docs/: WSL_Setup.md  index.html
scripts/: check-swift-config.ps1  clean-build.ps1  clean-build.sh  setup-swift-env.ps1  update-swift.ps1  use-swift62.ps1
(+20 files in other folders)
